# PortfolioConstruction

./: README.md
files/coin/: approximatePolicy.csv  exactPolicy.csv  finalDecision_approximate.csv  firstDecision_approximate.csv  firstDecision_exact.csv  parameters.txt  penultimateDecision_approximate.csv  penultimateDecision_exact.csv
files/examples/: dates.csv  gameParameters.txt
files/examples/1/: priceHistory.csv
files/examples/1/performance/: performance_allStock.csv  performance_half.csv  performance_log.csv  performance_target.csv  policy_target.csv  trades_log.csv  trades_target.csv
files/examples/2/: priceHistory.csv
files/examples/2/performance/: performance_allCash.csv  performance_allStock.csv  performance_half.csv  performance_log.csv  performance_target.csv  policy_target.csv  trades_log.csv  trades_target.csv
files/examples/3/: priceHistory.csv
files/examples/3/performance/: performance_allStock.csv  performance_half.csv  performance_log.csv  performance_target.csv  policy_target.csv  trades_log.csv  trades_target.csv
files/examples/4/: priceHistory.csv
files/examples/4/performance/: performance_allStock.csv  performance_half.csv  performance_log.csv  performance_target.csv  policy_log.csv  policy_target.csv  trades_log.csv  trades_target.csv
files/examples/5/: priceHistory.csv
files/examples/5/performance/: performance_allStock.csv  performance_half.csv  performance_log.csv  performance_target.csv  policy_target.csv  trades_log.csv  trades_target.csv
source/: readMe.txt
source/array/: array.c  array.h  array_private.h
source/cargo/: CMakeLists.txt  cargo.c  readMe.txt  recurrence.c  recurrence.h  search.c  search.h
source/coin/: CMakeLists.txt  coin.c  readMe.txt  recurrence.c  recurrence.h
source/common/: common.h  tools.c  tools.h
source/csv/: csv.c  csv.h  note.txt
source/differentiation/: differentiation.c  differentiation.h
source/matrix/: matrix.c  matrix.h  matrix_private.h
source/portfolio/: CMakeLists.txt  dynamicProgramming.h  kolmogorov.c  kolmogorov.h  output.c  portfolio.c  readMe.txt  recurrence.c  setup.h
source/strings/: note.txt  strings.c  strings.h  strings_private.h
source/utilityFunctions/: utilityFunctions.c  utilityFunctions.h
source/volume/: volume.c  volume.h  volume_private.h
wolfram/: 1 -- One Round of Coin Betting.nb  2 -- Approximation in Policy Space for Multiple Rounds of Coin Betting.nb  2 -- Approximation in Policy Space for One Round of Coin Betting.nb  3 -- Financial Data.nb  4 -- Browne.nb  5 -- Simulate Price History.nb  6 -- Plot Performance Results.nb  readMe.txt
wolfram/output/priceHistory/: priceHistory1.csv  priceHistory2.csv  priceHistory3.csv  priceHistory4.csv  priceHistory5.csv  simulationParameters.txt
